# hypothesis-fast

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: CI.yml  upstream-parity.yml
python/hypothesis_fast/: __init__.py  _engine.pyi  control.py  core.py  database.py  errors.py  native_strategies.py  settings.py  stateful.py  strategies.py
python/hypothesis_fast/extra/: __init__.py  _array_helpers.py  _lazy.py  numpy.py
python/hypothesis_fast/internal/: floats.py  intervalsets.py
python/hypothesis_fast/internal/conjecture/: choice.py  engine.py  floats.py  utils.py
src/: charmap.rs  choice.rs  data.rs  database.rs  engine.rs  floats.rs  intervalset.rs  lib.rs  provider.rs  stateful.rs  statistics.rs
src/strategy/: charset.rs  constructors.rs  draw.rs  mod.rs  nodes.rs  scalars.rs  typeres.rs
tests/: check_parity_outcomes.py  conftest.py  parity_outcomes.json  test_fallback.py  test_given.py  test_strategies.py
tests/hypothesis_compat/: UPSTREAM_FILES  UPSTREAM_REF  _compat_conjecture_common.py  _compat_debug.py  _compat_nocover_stateful.py  _compat_utils.py  conftest.py  fetch_upstream_tests.sh
tests/hypothesis_compat/extra_numpy/: conftest.py
tests/parity_baselines/: linux-py311.json  linux-py312.json  linux-py313.json  linux-py314.json  macos-py311.json  macos-py312.json  macos-py313.json  macos-py314.json
